recursion.logo.sierpinski.Sierpinski.scala.error
Erreur de compilation :
Sierpinski:6: error: not found: value droie
    droie(120)
    ^